admin: fix overflowing connections names in connections map
Currently, when the name of a connection overflows the size of the block
in the connection map, it is displayed on multiple lines.

This commit ensures that the name is always displayed on a single line
and that the overflowing content is hidden with the addition of trailing
ellipsis.

Closes #344

--- a/admin/src/components/layout/Sidebar/Sidebar.css
+++ b/admin/src/components/layout/Sidebar/Sidebar.css
@@ -10,6 +10,7 @@
 	flex-flow: column;
 	justify-content: flex-start;
 	align-items: center;
+	background-color: var(--bg-primary);
 }
 
 .sidebar .items {
